# cpgtools

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  bb.r  pyproject.toml  setup.py
.eggs/Cython-0.29-py3.6-macosx-10.6-intel.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  native_libs.txt
cpgtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  (+5 more)
docs/source/: change_log.rst  change_log.rst~  compare_diff_tools.rst  conf.py  dataset.rst  index.rst  installation.rst  overview.rst  overview.rst~
lib/CpGtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/cpgmodule/: BED.py  MI.py  MI.py.bak  a  a.bed  a.chr1.bed  b  b.chr1  c  imotif.py.bak  padjust.py  region2gene.py  utils.py
scripts/: CpG_aggregation.py  CpG_anno_position.py  CpG_anno_probe.py  CpG_density_gene_centered.py  CpG_distrb_chrom.py  CpG_distrb_gene_centered.py  CpG_distrb_region.py  CpG_logo.py  CpG_to_gene.py  beta_PCA.py  beta_UMAP.py  beta_combat.py  beta_imputation.py  beta_jitter_plot.py  beta_m_conversion.py  beta_profile_gene_centered.py  beta_profile_region.py  beta_remove_batch_effects.py  beta_selectNBest.py  beta_stacked_barplot.py  beta_stats.py  beta_topN.py  beta_trichotmize.py  dmc_Bayes.py  dmc_bb.py  dmc_fisher.py  dmc_glm.py  dmc_logit.py  dmc_nonparametric.py  dmc_ttest.py  predict_sex.py
src/cpgmodule/: MI.py  MI.py~  extend_bed.py  imotif.py  ireader.py  methylClock.py  region2gene.py  utils.py
src/cpgtools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/missingpy/: __init__.py  missforest.py
test/: 1.pval.txt  1.r  2.r  2.r.results.txt  2.r.warnings.txt  NUL  OUT_10.pval.txt  OUT_10.r.results.txt  OUT_4.pval.txt  OUT_4.r.results.txt  OUT_4.r.warnings.txt  b_out.fa  b_out.jaspar  b_out.meme  b_out.pfm  b_out.ppm  b_out.pwm  bb  cc.pval.tsv  hg19.RefSeq.union.1Kpromoter.bed  hg19.RefSeq.union.bed  hg19_CGI.bed4  hg19_H3K27ac_with_H3K4me1.bed4  hg19_H3K27me3.bed4  hg19_H3K4me3.bed4  test.sh  test_03.sh  test_04_TwoGroup.grp.csv  test_04_TwoGroup.tsv  test_05_TwoGroup.grp.csv  test_06_ThreeGroup.grp.csv  test_06_ThreeGroup.tsv  test_07_450K_CH.bed  test_09.grp.csv  test_09.pval.txt  test_09.tsv  test_10_TwoGroup.grp.csv  test_10_TwoGroup.tsv  tmp.pval.txt  tmp.r.results.txt  (+1 more)
test/LR_vs_BBR/: bbr_ID  bbr_out.xls  logit_ID
(+62 files in other folders)
